# bupt_work_collection

./: readme.md
ChattyCat/chatty-cat/: package.json  pnpm-lock.yaml  tsconfig.json
ChattyCat/chatty-cat-demo/: index.html  package.json  pnpm-lock.yaml
ChattyCat/chatty-cat-demo/src/: App.vue  ChatBox.vue  examples.ts  main.ts  monarch.ts
ChattyCat/chatty-cat-demo/src/tests/: App.test.ts  ChatBox.test.ts
ChattyCat/chatty-cat/src/: Chat.ts  Expression.ts  Script.ts  State.ts  Statement.ts  builtinFuncs.ts  index.ts  parse.ts  tokenize.ts
ChattyCat/chatty-cat/test/: Chat.test.ts  builtinFuncs.test.ts  parse.test.ts  tokenize.test.ts
ChattyCat/doc/: report.md
compiler/: .clang-format
compiler/LL1_parser/: CMakeLists.txt  Grammar.cpp  Grammar.h  LL1Table.cpp  LL1Table.h  Symbol.h  main.cpp  using.h
compiler/LL1_parser/doc/: report.md
compiler/LR_parser/: CMakeLists.txt  Grammar.cpp  Grammar.h  LR1Table.cpp  LR1Table.h  Symbol.h  main.cpp  using.h
compiler/LR_parser/doc/: report.md
compiler/handmade_lexer/: CMakeLists.txt  lexer.cpp  lexer.h  main.cpp  token.h
compiler/handmade_lexer/doc/: fig1.dot  fig2.dot  report.md
compiler/lex_lexer/: lex.l  lex.yy.c  main.cpp
compiler/lex_lexer/doc/: report.md
compiler/yacc_parser/: a.y  lex.l  lex.yy.c  y.tab.c
compiler/yacc_parser/doc/: report.md
computer_network/实验一：链路层滑动窗口协议的设计与实现/: datalink.c  datalink.h
cppoop/: .clang-format  报告.docx  报告.md
cppoop/基础实验/: 1.cpp  2.1.cpp  2.2.cpp  3.cpp  4.cpp  5.1.cpp  5.2.cpp
cppoop/综合实验/: CMakeLists.txt  protocol.md
cppoop/综合实验/client/: BattlePage.cpp  ConnectPage.cpp  GlobalContext.h  LoginPage.cpp  MainPage.cpp  MakePage.cpp  PlayPage.cpp  RankPage.cpp  Router.h  SignupPage.cpp  Socket.cpp  Socket.h  main.cpp  scroller.hpp  ui.h
cppoop/综合实验/server/: Battle.cpp  Battle.h  Database.cpp  Database.h  Problem.h  Session.cpp  Session.h  User.cpp  User.h  main.cpp
dnsrelay/: .clang-format  CMakeLists.txt  data.c  data.h  id_convert.c  id_convert.h  list.h  log.c  log.h  main.c  socket.c  socket.h  table.c  table.h
